Fix ktlint: remove extra blank line in CloudKmsSigner